--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.6.201602180812</version>
+        <executions>
+          <execution>
+            <id>default-prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 </project>
