--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,10 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
-      <plugin>
-        <groupId>org.jacoco</groupId>
+  <build>
+    <plugins>
+     <plugin>
+     <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>0.7.6.201602180812</version>
         <executions>
@@ -35,5 +36,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+     </plugin>
+    </plugins>
+  </build>     
 </project>
