--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+<build>
+<plugins>
   <plugin>
   <groupId>org.jacoco</groupId>
   <artifactId>jacoco-maven-plugin</artifactId>
@@ -35,4 +37,6 @@
     </execution>
   </executions>
   </plugin>
+  </plugins>
+</build>
 </project>
